# nixos-mobile

./: .gitignore  flake.nix
devices/nothing-spacewar/: device.nix  example.nix
devices/nothing-spacewar/firmware/: _base.nix  firmware.nix  hexagon.nix
devices/nothing-spacewar/kernel/: audio.patch  config.aarch64  config.nix  kernel.nix
lib/: lib.nix  nixosMobileSystem.nix
modules/: boot-control.nix  bootloader.nix  cross-system.nix  device.nix  devices.nix  fastboot-images.nix  kernel.nix  rootfs.nix
modules/stage0/: stage0.nix
modules/stage0/init/: Cargo.toml  package.nix
modules/stage0/init/src/: find_closures.rs  find_systems.rs  kexec.rs  main.rs
modules/stage0/init/src/ui/: battery.rs  input.rs  mod.rs  time.rs
pkgs/: nushell-script.nix
pkgs/bootimg/: builder.nix
pkgs/dtbtool/: default.nix
pkgs/dtbtool-exynos/: default.nix
pkgs/kernel/: _eval-config.nix  builder.nix  gcc10-extern_YYLOC_global_declaration.patch
